--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
+    implementation 'org.slf4j:slf4j-api:2.0.5'
     implementation 'com.github.maxisandoval37:pp2-core:SRP-and-SoC-fixes-SNAPSHOT'
 }
 
